objects/wkitsm__RequestMenuSubmission__c.object
<CustomObject>
    <fields>
        <fullName>wkitsm__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>MenuItemRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkitsm__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>MenuItemRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkitsm__Is_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true when the request is both inserted and all responses are inserted. Used mainly to build
    record-triggered flows off of.</description>
        <label>Is Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkitsm__RequestMenuItem__c</fullName>
        <label>Request Menu Item</label>
        <referenceTo>wkitsm__RequestMenuItem__c</referenceTo>
        <relationshipLabel>Request Menu Submissions</relationshipLabel>
        <relationshipName>RequestMenuSubmissions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Request Menu Item Submission</label>
    <nameField>
        <displayFormat>RMS-{0000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request Menu Item Submissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>